k8s-manifests/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-service
  labels:
    app: simpleapi
spec:
  selector:
    app: simpleapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
