k8s-manifests/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: moves-api.mstsi.eti.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpleapi-service
                port:
                  number: 80
